# aishalib

./: .gitignore  LICENSE  README.md  build.sh  environment.yml  pyproject.toml  system_prompt_example.txt
src/: test.context  test.ipynb
src/aishalib/: aishalib.py  llmbackend.py  memory.py  test.ipynb  tools.py  utils.py
src/aishalib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
